# word-game

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
dictionary/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
docs/html/: annotated.html  annotated_dup.js  class_computer_player-members.html  class_computer_player.html  class_computer_player.js  class_dictionary-members.html  class_dictionary.html  class_dictionary.js  class_game-members.html  class_game.html  class_game.js  class_human_player-members.html  class_human_player.html  class_human_player.js  class_player-members.html  class_player.html  class_player.js  classes.html  dictionary_8cpp.html  dictionary_8h.html  dictionary_8h.js  dictionary_8h_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  game_8cpp.html  game_8h.html  game_8h.js  game_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  hierarchy.html  hierarchy.js  (+17 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  (+10 more)
src/: dictionary.cpp  dictionary.h  game.cpp  game.h  main.cpp  player.cpp  player.h  utils.cpp  utils.h
tests/: test_game.cpp
